parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@annotated_assignment.py-8.snap
---
source: parser/src/lexer/mod.rs
description: ""
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
[]
