parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@annotated_assignment.py.snap
---
source: parser/src/lexer/lexer.rs
description: "a: int = 1"
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Colon,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Identifier,
        value: Str(
            "int",
        ),
        start: 3,
        end: 6,
    },
    Token {
        kind: Assign,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 9,
        end: 10,
    },
]
